# ntpclient

./: CMakeLists.txt  ntpclient.c
